k8s-basic-training-master/basic-express/deployment.yaml

apiVersion: v1
kind: Deployment
metadata:
  name: basic-express-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: basic-express-cluster
    spec:
      containers:
      - name: basic-express-cluster
        image: basic-express
        ports:
        - containerPort: 80

apiVersion: v1
kind: Service
metadata:
  name: basic-express-service
spec:
  selector:
    app: basic-express
  ports:
  - protocol: TCP
    port: 80
    nodePort: 3000
    targetPort: 80
